--- a/tp1/contact.html
+++ b/tp1/contact.html
@@ -1,35 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <link rel="shortcut icon" href="./img/LogoMightyducks01.png" type="image/x-icon">
-</head>
-<body>
+    <link
+      rel="shortcut icon"
+      href="./img/LogoMightyducks01.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
     <header>
-        <figure>
-            <img src="./img/LogoMightyducks01.png" alt="Mighty Ducks Hockey League" width="200" height="250">
-             
-        </figure>          
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html">Home</a> |
-            <a href="./about.html">About MDHL</a> |
-            <a href="./contact.html">contact</a>
-        </nav>    
+      <figure>
+        <img
+          src="./img/LogoMightyducks01.png"
+          alt="Mighty Ducks Hockey League"
+          width="200"
+          height="250"
+        />
+      </figure>
+      <h1>Mighty Ducks Hockey League</h1>
+      <nav>
+        <a href="./index.html">Home</a> |
+        <a href="./about.html">About MDHL</a> |
+        <a href="./contact.html">contact</a>
+      </nav>
     </header>
-    
+
     <main>
-        <figure>
-            <img src="./img/hockey3.jpg" alt="imagen" width="200" height="150">
-        </figure>
-        <div>
-            <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-            <p>We reply to your email as soon as we can.</p>
-        </div>
+      <figure>
+        <img src="./img/hockey3.jpg" alt="imagen" width="200" height="150" />
+      </figure>
+      <div>
+        <p>
+          Please email us at
+          <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
+        </p>
+        <p>We reply to your email as soon as we can.</p>
+      </div>
     </main>
     <footer></footer>
-</body>
+  </body>
 </html>
