--- a/tp1/about.html
+++ b/tp1/about.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
- 
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>about</title>
-    <link rel="shortcut icon" href="./img/LogoMightyducks01.png" type="image/x-icon">
-    
-</head>
-<body>
-
+    <link
+      rel="shortcut icon"
+      href="./img/LogoMightyducks01.png"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
     <header>
-        <figure>
-            <img src="./img/LogoMightyducks01.png" alt="Mighty Ducks Hockey League" width="200" height="250">
-        </figure>          
-        <h1>Mighty Ducks Hockey League</h1>
-        <nav>
-            <a href="./index.html">Home</a> |
-            <a href="./about.html">About MDHL</a> |
-            <a href="./contact.html">contact</a>
-        </nav>    
+      <figure>
+        <img
+          src="./img/LogoMightyducks01.png"
+          alt="Mighty Ducks Hockey League"
+          width="200"
+          height="250"
+        />
+      </figure>
+      <h1>Mighty Ducks Hockey League</h1>
+      <nav>
+        <a href="./index.html">Home</a> |
+        <a href="./about.html">About MDHL</a> |
+        <a href="./contact.html">contact</a>
+      </nav>
     </header>
     <main>
-        <figure>
-            <img src="./img/hockey2.jpg" alt="imagen" width="200" height="150">
-        </figure>
-        <section>
-            <h2>
-                Mision
-            </h2>
-            <p>
-                &emsp;To support young athletes living Chicago's northside neighborhood, who have an interest in
-                learning and playing soccer, with opportunities to learn and practice skills related to the game of
-                hockey, specifically those skills around team cooperation and good sportsmanship
-            </p>
-        </section>
-        <section>
-            <h2>
-                Vision
-            </h2>
-            <p>
-                &emsp;The Mighty Ducks Hockey League aspires to develop strong, well-rounded and mindful athletes
-                through the building of character, self-discipline, and leadership.
-            </p>
-        </section>
-        <section>
-            <h2>
-                General Information
-            </h2>
-            <p>
-                &emsp;The Mighty Ducks Soccer League was established in 1996 to provide athletes residing
-                Chicago's northside neighborhoods an environment in which to learn and play hockey. To be a
-                member of MDHL, you must be between the ages of 4 - 12 and reside a Chicago northside
-                neighborhood. MDHL ran by o small full-time staff, and relies on the generous volunteer time of
-                parents and previous league members
-            </p>
-        </section>
-
+      <figure>
+        <img src="./img/hockey2.jpg" alt="imagen" width="200" height="150" />
+      </figure>
+      <section>
+        <h2>Mision</h2>
+        <p>
+          &emsp;To support young athletes living Chicago's northside
+          neighborhood, who have an interest in learning and playing soccer,
+          with opportunities to learn and practice skills related to the game of
+          hockey, specifically those skills around team cooperation and good
+          sportsmanship
+        </p>
+      </section>
+      <section>
+        <h2>Vision</h2>
+        <p>
+          &emsp;The Mighty Ducks Hockey League aspires to develop strong,
+          well-rounded and mindful athletes through the building of character,
+          self-discipline, and leadership.
+        </p>
+      </section>
+      <section>
+        <h2>General Information</h2>
+        <p>
+          &emsp;The Mighty Ducks Soccer League was established in 1996 to
+          provide athletes residing Chicago's northside neighborhoods an
+          environment in which to learn and play hockey. To be a member of MDHL,
+          you must be between the ages of 4 - 12 and reside a Chicago northside
+          neighborhood. MDHL ran by o small full-time staff, and relies on the
+          generous volunteer time of parents and previous league members
+        </p>
+      </section>
     </main>
     <footer></footer>
-</body>
+  </body>
 </html>
