--- a/contact.html
+++ b/contact.html
@@ -7,31 +7,34 @@
     <title>contact</title>
     <link
       rel="shortcut icon"
-      href="./img/LogoMightyducks01.png"
+      href="./img/design1_image1.jpg"
       type="image/x-icon"
     />
+    <link rel="stylesheet" href="./css/style1.css">
+    <!--<link rel="stylesheet" href="./css/style2.css">-->
+    <!--<link rel="stylesheet" href="./css/style3.css">-->
   </head>
   <body>
     <header>
       <figure>
-        <img
-          src="./img/LogoMightyducks01.png"
+        <img img id="banner"
+          src="./img/design1_image1.jpg"
           alt="Mighty Ducks Hockey League"
-          width="200"
-          height="250"
         />
       </figure>
+
       <h1>Mighty Ducks Hockey League</h1>
+      <h2>Contact</h2>
+
+    </header>
       <nav>
         <a href="./index.html">Home</a> |
         <a href="./about.html">About MDHL</a> |
         <a href="./contact.html">contact</a>
       </nav>
-    </header>
-
     <main>
       <figure>
-        <img src="./img/hockey3.jpg" alt="imagen" width="200" height="150" />
+        <img src="./img/design1_image2.jpg" alt="imagen" width="200" height="150" />
       </figure>
       <div>
         <p>
