--- a/index.html
+++ b/index.html
@@ -7,32 +7,38 @@
     <title>Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./img/design1_image1.jpg"
+      href="./img/LogoMightyducks01.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./css/style1.css">
-    <!--<link rel="stylesheet" href="./css/style2.css">-->
-    <!--<link rel="stylesheet" href="./css/style3.css">-->
   </head>
 
   <body>
     <header>
       <figure>
-        <img id="banner"
+        <img
           src="./img/design1_image1.jpg"
           alt="Mighty Ducks Hockey League"
+          width="200"
+          height="150"
+        />
+      </figure>
+      <figure>
+        <img
+          src="./img/Logo-Mighty-ducks-01.png"
+          alt="Mighty Ducks Hockey League"
+          width="200"
+          height="150"
         />
       </figure>
 
       <h1>Mighty Ducks Hockey League</h1>
-      <h2>Upcoming Events</h2>
-
-    </header>
       <nav>
         <a href="./index.html">Home</a> |
         <a href="./about.html">About MDHL</a> |
         <a href="./contact.html">contact</a>
       </nav>
+    </header>
+
     <main>
       <section>
         <figure>
