--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
       type="image/x-icon"
     />
     <!-- <link rel="stylesheet" href="./css/style1.css"> -->
-    <link rel="stylesheet" href="./css/style2.css">
-    <!-- <link rel="stylesheet" href="./css/style3.css"> -->
+    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+    <link rel="stylesheet" href="./css/style3.css">
   </head>
   
   <body>
@@ -39,7 +39,7 @@
       <nav>
         <a href="./index.html">Home</a> 
         <a href="./about.html">About MDHL</a> 
-        <a href="./contact.html">contact</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </aside>
     <div>
