--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
       type="image/x-icon"
     />
     <!-- <link rel="stylesheet" href="./css/style1.css"> -->
-    <link rel="stylesheet" href="./css/style2.css">
-    <!-- <link rel="stylesheet" href="./css/style3.css"> -->
+    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+    <link rel="stylesheet" href="./css/style3.css">
   </head>
   <body>
     <header>
@@ -28,7 +28,7 @@
       <figure>
         <img id= "logo" src="./img/LogoMightyducks01.png" alt="logo"  />
       </figure>
-      <h2>About</h2>
+      <h2>Contact</h2>
     </section>
 
     </header>
@@ -38,7 +38,7 @@
       <nav>
         <a href="./index.html">Home</a> 
         <a href="./about.html">About MDHL</a> 
-        <a href="./contact.html">contact</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </aside>
     <div>
@@ -61,7 +61,4 @@
 
 
 
-
-   
-  </body>
 </html>
