--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       type="image/x-icon"
     />
     <!-- <link rel="stylesheet" href="./css/style1.css"> -->
-    <link rel="stylesheet" href="./css/style2.css">
-    <!-- <link rel="stylesheet" href="./css/style3.css"> -->
+    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+    <link rel="stylesheet" href="./css/style3.css">
   </head>
 
   <body>
@@ -40,7 +40,7 @@
       <nav>
         <a href="./index.html">Home</a> 
         <a href="./about.html">About MDHL</a> 
-        <a href="./contact.html">contact</a>
+        <a href="./contact.html">Contact</a>
       </nav>
     </aside>
 
