--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
         <nav>
           <a href="./index.html">Home</a>
           <a href="./about.html">About MDHL</a>
+          <a href="./game.html">Game Information</a>
+          <a href="./rules.html">Rules &amp Policies </a>
           <a href="./contact.html">Contact</a>
         </nav>
       </aside>
