--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <a href="./about.html">About MDHL</a>
           <a href="./game.html">Game Information</a>
           <a href="./rules.html">Rules &amp Policies </a>
+          <a href="./registration.html">Registration </a>
           <a href="./contact.html">Contact</a>
         </nav>
       </aside>
