--- a/registration.html
+++ b/registration.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>about</title>
+    <title>Registration</title>
     <link
       rel="shortcut icon"
       href="./img/LogoMightyducks01.png"
@@ -29,7 +29,7 @@
         <figure>
           <img id="logo" src="./img/LogoMightyducks01.png" alt="logo" />
         </figure>
-        <h2>About</h2>
+        <h2>Registration</h2>
       </section>
     </header>
 
