--- a/rules.html
+++ b/rules.html
@@ -40,12 +40,13 @@
     <main>
       <aside>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="./about.html">About MDHL</a>
-            <a href="./game.html">Game Information</a>
-            <a href="./rules.html">Rules &amp Policies </a>
-            <a href="./contact.html">Contact</a>
-          </nav>
+          <a href="./index.html">Home</a>
+          <a href="./about.html">About MDHL</a>
+          <a href="./game.html">Game Information</a>
+          <a href="./rules.html">Rules &amp Policies </a>
+          <a href="./registration.html">Registration </a>
+          <a href="./contact.html">Contact</a>
+        </nav>
       </aside>
 
       <div>
