--- a/registration.html
+++ b/registration.html
@@ -1,80 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registration</title>
-    <link
-      rel="shortcut icon"
-      href="./img/LogoMightyducks01.png"
-      type="image/x-icon"
-    />
-    <!-- <link rel="stylesheet" href="./css/style1.css"> -->
-    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
-    <link rel="stylesheet" href="./css/style3.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1>Mighty Ducks Hockey League</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Registration</title>
+  <link rel="shortcut icon" href="./img/LogoMightyducks01.png" type="image/x-icon" />
+  <!-- <link rel="stylesheet" href="./css/style1.css"> -->
+  <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+  <link rel="stylesheet" href="./css/style3.css" />
+  <link rel="stylesheet" href="./css/form.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Mighty Ducks Hockey League</h1>
+    <figure>
+      <img id="banner" src="./img/design1_image1.jpg" alt="Mighty Ducks Hockey League" />
+    </figure>
+    <section>
       <figure>
-        <img
-          id="banner"
-          src="./img/design1_image1.jpg"
-          alt="Mighty Ducks Hockey League"
-        />
+        <img id="logo" src="./img/LogoMightyducks01.png" alt="logo" />
       </figure>
-      <section>
-        <figure>
-          <img id="logo" src="./img/LogoMightyducks01.png" alt="logo" />
-        </figure>
-        <h2>Registration</h2>
-      </section>
-    </header>
+      <h2>Registration</h2>
+    </section>
+  </header>
 
-    <main>
-      <aside>
-        <nav>
-          <a href="./index.html">Home</a>
-          <a href="./about.html">About MDHL</a>
-          <a href="./game.html">Game Information</a>
-          <a href="./rules.html">Rules &amp Policies </a>
-          <a href="./registration.html">Registration </a>
-          <a href="./contact.html">Contact</a>
-        </nav>
-      </aside>
-      <div>
-        <section>
-          <h2>Mision</h2>
-          <p>
-            To support young athletes living Chicago's northside neighborhood,
-            who have an interest in learning and playing soccer, with
-            opportunities to learn and practice skills related to the game of
-            hockey, specifically those skills around team cooperation and good
-            sportsmanship
+  <main>
+    <aside>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="./game.html">Game Information</a>
+        <a href="./rules.html">Rules &amp Policies </a>
+        <a href="./registration.html">Registration </a>
+        <a href="./contact.html">Contact</a>
+      </nav>
+    </aside>
+
+    <div id="form">
+
+      <h1>Registration From</h1>
+      <form action="./show_data.html" method="get"> <!--vinculacion de ejecucion del form-->
+        <fieldset> <!--secction in forms-->
+          <!--<legend>DATOS PERSONALES</legend>titulo de seccion-->
+
+          <label for="fnanme">Player's First Name: </label> <!--inputs. deben estar conectados id y for-->
+          <input type="text" name="fname" id="fname" required> <!--sino no se envia el valor-->
+          <!--required no envia los datos si no se complreto-->
+          <label for="lnanme">Last Name: </label> <!--inputs. deben estar conectados id y for-->
+          <input type="text" name="lname" id="lname" required> <!--sino no se envia el valor-->
+          <br>
+          <label for="address">Street Address</label>
+          <input type="text" name="address" id="address">
+          <br>
+          <label for="city">City</label>
+          <input type="text" name="city" id="city">
+          <label for="zip">Zip Code</label>
+          <input type="number" name="zip" id="zip" max="9999">
+          <br>
+          <label for="birth">Birth Date (mm/dd/yyy)</label>
+          <input type="text" name="birth" id="birth">
+          <label for="Gender"></label>
+          <label>Gender:</label>
+          <label for="female">Female</label>
+          <input type="checkbox" name="gen" id="female">
+          <label for="male">Male</label>
+          <input type="checkbox" name="gen" id="male">
+          <br>
+          <label for="Grade">Grade</label>
+          <input type="checkbox" name="grade" id="grade">
+
+          <label>Pre-School </label>
+          <label for="1"></label>
+          <input type="checkbox" name="1" id="1" value="selected">
+          <label><sup>1st</sup></label>
+          <label for="2"></label>
+          <input type="checkbox" name="2" id="2" value="selected">
+          <label><sup>2dn</sup></label>
+          <label for="3"></label>
+          <input type="checkbox" name="3" id="3" value="selected">
+          <label><sup>3rd</sup></label>
+          <label for="4"></label>
+          <input type="checkbox" name="4" id="4" value="selected">
+          <label><sup>4th</sup></label>
+          <label for="5"></label>
+          <input type="checkbox" name="5" id="5" value="selected">
+          <label><sup>5th</sup></label>
+        </fieldset>
+        <fieldset>
+          <h3>Which elementary school do you live near?</h3>
+          <strong>Closest School</strong><br>
+          <label for="forward">Forward</label>
+          <input type="checkbox" name="forward" id="forward">
+          <label for="midfield">Midfield</label>
+          <input type="checkbox" name="midfield" id="midfield"><br>
+          <!--table???-->
+          <label for="Defense">Defense</label>
+          <input type="checkbox" name="Defense" id="Defense">
+          <label for="Golkeeper">Golkeeper</label>
+          <input type="checkbox" name="Golkeeper" id="Golkeeper"><br>
+        </fieldset>
+        <fieldset>
+          <h3>Uniform Size:</h3>
+          <table>
+            <tr>
+              <td>
+                <label for="ysmall">Youth Small</label>
+                <input type="checkbox" name="ysmall" id="ysmall">
+              </td>
+              <td>
+                <label for="Medium">Medium</label>
+                <input type="checkbox" name="Medium" id="Medium">
+              </td>
+            </tr>
+
+            <tr>
+              <td>
+                <label for="ymedium">Youth Medium</label>
+                <input type="checkbox" name="ymedium" id="ymedium">
+              </td>
+
+
+              <td>
+                <label for="Large">Large</label>
+                <input type="checkbox" name="Large" id="Large">
+              </td>
+
+
+            <tr>
+              <td>
+                <label for="ylarge">Youth Large</label>
+                <input type="checkbox" name="ylarge" id="ylarge">
+              </td>
+              <td>
+                <label for="Extra-Large">Extra-Large</label>
+                <input type="checkbox" name="Extra-Large" id="Extra-Large"><br>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label for="Small">Small</label>
+                <input type="checkbox" name="Small" id="Small"><br>
+              </td>
+            </tr>
+
+
+            </tr>
+          </table>
+
+
+
+
+
+
+
+
+
+        </fieldset>
+
+        <fieldset>
+          <h3>Permission to Play</h3>
+          <p>1, the parent or guardian of the minor registrant, agree that the registrant and I will abide by all the
+            rules of the Mighty Ducks Hockey League (MDHL). In recognizing the possibility of physical injury associated
+            with hockey and in consideration for the "League" accepting the registrant for its hockey programs and
+            activities, 1 hereby release, discharge, and/or otherwise indemnify MDHL, their employees and associated
+            personnel and volunteers,including the facilities used for practicas and games, against any claim by or on
+            behalf of the registrant as a result of the registrant's participation in the programand/orbeing transportad
+            to or from MDHL sponsored activities, which transportation
+            <br>
+            By signing below, 1 herebyagree andauthorizethe above.ln addition, by signing below, lalso acknowledge that
+            I have read the cancellation policy and agree to its terms.
           </p>
-        </section>
-        <section>
-          <h2>Vision</h2>
-          <p>
-            The Mighty Ducks Hockey League aspires to develop strong,
-            well-rounded and mindful athletes through the building of character,
-            self-discipline, and leadership.
-          </p>
-        </section>
-        <section>
-          <h2>General Information</h2>
-          <p>
-            The Mighty Ducks Soccer League was established in 1996 to provide
-            athletes residing Chicago's northside neighborhoods an environment
-            in which to learn and play hockey. To be a member of MDHL, you must
-            be between the ages of 4 - 12 and reside a Chicago northside
-            neighborhood. MDHL ran by o small full-time staff, and relies on the
-            generous volunteer time of parents and previous league members
-          </p>
-        </section>
-      </div>
-    </main>
-  </body>
+          <br>
+          <label for="singature">Parent/GuardianSignature:</label>
+
+          <input type="text" name="signature" id="signature">
+          <br>
+          <br>
+          <label for="date">Date</label>
+          <input type="text" name="date" id="date">
+
+        </fieldset>
+
+        <input type="submit" value="Submit" id="submit">
+        <input type="reset" value="Clean" id="reset">
+      </form>
+
+
+    </div>
+
+
+  </main>
+</body>
+
 </html>
