--- a/game.html
+++ b/game.html
@@ -1,179 +1,186 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rules of Play &amp Policies</title>
-    <link
-      rel="shortcut icon"
-      href="./img/LogoMightyducks01.png"
-      type="image/x-icon"
-    />
-    <!-- <link rel="stylesheet" href="./css/style1.css"> -->
-    <!-- <link rel="stylesheet" href="./css/style2.css"> -->
-    <link rel="stylesheet" href="./css/style3.css" />
-  </head>
 
-  <body>
-    <header>
-      <h1>Game Information</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rules of Play &amp Policies</title>
+  <link rel="shortcut icon" href="./img/LogoMightyducks01.png" type="image/x-icon" />
+  <!-- <link rel="stylesheet" href="./css/style1.css"> -->
+  <!-- <link rel="stylesheet" href="./css/style2.css"> -->
+  <link rel="stylesheet" href="./css/style3.css" />
+</head>
+
+<body>
+  <header>
+    <h1>Game Information</h1>
+    <figure>
+      <img id="banner" src="./img/design1_image1.jpg" alt="Mighty Ducks Hockey League" />
+    </figure>
+    <section>
       <figure>
-        <img
-          id="banner"
-          src="./img/design1_image1.jpg"
-          alt="Mighty Ducks Hockey League"
-        />
+        <img id="logo" src="./img/LogoMightyducks01.png" alt="logo" />
       </figure>
-      <section>
-        <figure>
-          <img id="logo" src="./img/LogoMightyducks01.png" alt="logo" />
-        </figure>
-        <h2>About</h2>
-      </section>
-    </header>
+      <h2>About</h2>
+    </section>
+  </header>
 
-    <main>
-      <aside>
-        <nav>
-          <a href="./index.html">Home</a>
-          <a href="./about.html">About MDHL</a>
-          <a href="./game.html">Game Information</a>
-          <a href="./rules.html">Rules &amp Policies </a>
-          <a href="./registration.html">Registration </a>
-          <a href="./contact.html">Contact</a>
-        </nav>
-      </aside>
+  <main>
+    <aside>
+      <nav>
+        <a href="./index.html">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="./game.html">Game Information</a>
+        <a href="./rules.html">Rules &amp Policies </a>
+        <a href="./registration.html">Registration </a>
+        <a href="./contact.html">Contact</a>
+      </nav>
+    </aside>
 
-      <div>
-        <h2>Mighty Ducks Hockey League</h2>
+    <div>
+      <h2>Mighty Ducks Hockey League</h2>
 
-        <p><u> Fall Schedule </u></p>
-        <p><u>* All games take place on Saturday</u></p>
+      <p><u> Fall Schedule </u></p>
+      <p><u>* All games take place on Saturday</u></p>
 
-        <table>
-          <!--tabla-->
-          <tr>
-            <!--fila-->
-            <th>SEPTEMBER</th>
-            <!--header-->
-            <th>Teams</th>
-            <th>Location</th>
-            <th>Times</th>
-          </tr>
+      <table>
+        <!--tabla-->
+        <tr>
+          <!--fila-->
+          <th>SEPTEMBER</th>
+          <!--header-->
+          <th>Teams</th>
+          <th>Location</th>
+          <th>Times</th>
+        </tr>
 
-          <tr>
-            <!--rowspan y colspan extiende la celda-->
-            <td rowspan="2">9/01</td>
-            <td>U1and U4</td>
-            <!--celda-->
-            <td>AJ Katzenmaier</td>
-            <td>9:30 a.m.</td>
-            <td> <a href="#Katzenmaier">map</a></td>
-          </tr>
-          <tr>
-            <td>U3 and U2</td>
-            <td>Greenbay</td>
-            <td>1 :00 p.m.</td>
-            <td> <a href="#Greenbay">map</a></td>
-          </tr>
-          <tr>
-            <td rowspan="2">9/08</td>
-            <td>U5 and U6</td>
-            <td>Howard A Yeager</td>
-            <td>9:30 a.m</td>
-            <td> <a href="#Howard">map</a></td>
-          </tr>
-          <tr>
-            <td>U6 andU1</td>
-            <td>Marjorie P Hart</td>
-            <td>1 :00 p.m.</td>
-            <td> <a href="#Marjorie">map</a></td>
-          </tr>
-          <tr>
-            <td rowspan="2">9/15</td>
-            <td>U2 and U4</td>
-            <td>North</td>
-            <td>9:30 a.m</td>
-            <td><s>map</s></td>
-          </tr>
-          <tr>
-            <td>U3 and U5</td>
-            <td>AJ Katzenmaier</td>
-            <td>1 :00 p.m.</td>
-            <td><s>map</s></td>
-          </tr>
-          <tr>
-            <td rowspan="2">9/22</td>
-            <td>U1 and U3</td>
-            <td>South</td>
-            <td>9:30 a.m</td>
-            <td style="text-decoration: line-through;"><s>map</s></td>
-          </tr>
-          <tr>
-            <td>U2 and U6</td>
-            <td>Howard A Yeager</td>
-            <td>1 :00 p.m.</td>
-            <td><s>map</s></td>
-          </tr>
-          <tr>
-            <td>9/29</td>
-            <td>U4 and US</td>
-            <td>Greenbay</td>
-            <td>9:30 a.m</td>
-            <td><s>map</s></td>
-          </tr>
-        </table>
-        <br /><br /><br />
+        <tr>
+          <!--rowspan y colspan extiende la celda-->
+          <td rowspan="2">9/01</td>
+          <td>U1and U4</td>
+          <!--celda-->
+          <td>AJ Katzenmaier</td>
+          <td>9:30 a.m.</td>
+          <td> <a href="#Katzenmaier">map</a></td>
+        </tr>
+        <tr>
+          <td>U3 and U2</td>
+          <td>Greenbay</td>
+          <td>1 :00 p.m.</td>
+          <td> <a href="#Greenbay">map</a></td>
+        </tr>
+        <tr>
+          <td rowspan="2">9/08</td>
+          <td>U5 and U6</td>
+          <td>Howard A Yeager</td>
+          <td>9:30 a.m</td>
+          <td> <a href="#Howard">map</a></td>
+        </tr>
+        <tr>
+          <td>U6 andU1</td>
+          <td>Marjorie P Hart</td>
+          <td>1 :00 p.m.</td>
+          <td> <a href="#Marjorie">map</a></td>
+        </tr>
+        <tr>
+          <td rowspan="2">9/15</td>
+          <td>U2 and U4</td>
+          <td>North</td>
+          <td>9:30 a.m</td>
+          <td style="color:grey"><s>map</s></td>
+        </tr>
+        <tr>
+          <td>U3 and U5</td>
+          <td>AJ Katzenmaier</td>
+          <td>1 :00 p.m.</td>
+          <td style="color:grey"><s>map</s></td>
+        </tr>
+        <tr>
+          <td rowspan="2">9/22</td>
+          <td>U1 and U3</td>
+          <td>South</td>
+          <td>9:30 a.m</td>
+          <td style="color:grey"><s>map</s></td>
+        </tr>
+        <tr>
+          <td>U2 and U6</td>
+          <td>Howard A Yeager</td>
+          <td>1 :00 p.m.</td>
+          <td style="color:grey"><s>map</s></td>
+        </tr>
+        <tr>
+          <td>9/29</td>
+          <td>U4 and US</td>
+          <td>Greenbay</td>
+          <td>9:30 a.m</td>
+          <td style="color:grey"><s>map</s></td>
+        </tr>
+      </table>
+      <br /><br /><br />
 
-        <table>
-          <tr>
-            <td colspan="2"><strong> Facility Type:</strong> Outdoor</td>
-          </tr>
-          <tr>
-            <td colspan="2">
-              <p>
-                <strong>Additional l nformation:</strong> llf deemed necessary
-                by MDHL 1ames may be shortened or cancelled due to extreme
-                weather conditions.
-              </p>
-            </td>
-          </tr>
+      <table>
+        <tr>
+          <td colspan="2"><strong> Facility Type:</strong> Outdoor</td>
+        </tr>
+        <tr>
+          <td colspan="2">
+            <p>
+              <strong>Additional l nformation:</strong> llf deemed necessary
+              by MDHL 1ames may be shortened or cancelled due to extreme
+              weather conditions.
+            </p>
+          </td>
+        </tr>
 
-          <tr>
-            <td colspan="2">
-              <p>
-                <strong>Please direct all questions to:</strong> Michael
-                Randall, League Coordinator
-              </p>
-            </td>
-          </tr>
-          <tr>
-            <td><strong>Phone:</strong>(630) 690-8132</td>
-            <td style="text-align: right">
-              <strong>Email:</strong> michael.ra ndall@cchihockey.org
-            </td>
-          </tr>
-        </table>
-        <br /><br />
-        <br /><br />
-      </div>
-      <div>
-        <h1>Locations</h1><br>
-        <a name="Katzenmaier">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675889615513!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </a>
-        <br>
-        <a name="Greenbay">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11390.552085821253!2d-88.1256306!3d44.4610932!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x700104f749606feb!2sGreen%20Bay%20United%20Ice%20Hockey!5e0!3m2!1ses-419!2sar!4v1675889772897!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <tr>
+          <td colspan="2">
+            <p>
+              <strong>Please direct all questions to:</strong> Michael
+              Randall, League Coordinator
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <td><strong>Phone:</strong>(630) 690-8132</td>
+          <td style="text-align: right">
+            <strong>Email:</strong> michael.ra ndall@cchihockey.org
+          </td>
+        </tr>
+      </table>
+      <br /><br />
+      <br /><br />
+    </div>
+    <div>
+      <h1>Locations</h1><br>
+      <a name="Katzenmaier">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11799.122572613156!2d-87.8628046!3d42.3258772!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcf2bbe275c6da815!2sAJ%20Katzenmaier%20Academy!5e0!3m2!1ses-419!2sar!4v1675889615513!5m2!1ses-419!2sar"
+          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </a><br><br><br>
+      <a name="Greenbay">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11390.552085821253!2d-88.1256306!3d44.4610932!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x700104f749606feb!2sGreen%20Bay%20United%20Ice%20Hockey!5e0!3m2!1ses-419!2sar!4v1675889772897!5m2!1ses-419!2sar"
+          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </a>
-        <a name="Howard">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675889845921!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <br><br><br>
+      <a name="Howard">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11801.080246623287!2d-87.8538811!3d42.3154383!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1675889845921!5m2!1ses-419!2sar"
+          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </a>
-        <a name="Marjorie">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11798.878466491737!2d-87.8456879!3d42.3271787!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1675889917172!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <br><br><br>
+      <a name="Marjorie">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11798.878466491737!2d-87.8456879!3d42.3271787!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9a4d5f9aafd42e02!2sMarjorie%20P%20Hart%20School!5e0!3m2!1ses-419!2sar!4v1675889917172!5m2!1ses-419!2sar"
+          width="400" height="300" style="border:1;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
       </a>
     </div>
-    </main>
-  </body>
+  </main>
+</body>
+
 </html>
